data/derived/comb/progs/unify/prog6484.ml.out
Characters 29-42:
  let fixpoint (f,b) = wwhile ((helper(f,b)),b);;
                               ^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
